src/test/deca/context/invalid/created/decl_class/unknown_super.deca
// Description :
//    super classe non déclarée
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 7 :(1.3) Identificateur B non déclaré

class A extends B{
}